[DONE] static login and logout portion

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 
 MONGODB_URL="mongodb+srv://ankur-caffee-admin:s2F2mCKkmEAmsnGQ@cluster0.0wqac.mongodb.net/ankur-caffee"
+NEXTAUTH_URL="http://localhost:3000/"
+SECRET_KEY="alkuo154eUH65Ilkdshh_hsdbkKKSPMCY"
