[RUNNING] profile updating

--- a/.env
+++ b/.env
@@ -2,3 +2,6 @@
 MONGODB_URL="mongodb+srv://ankur-caffee-admin:s2F2mCKkmEAmsnGQ@cluster0.0wqac.mongodb.net/ankur-caffee"
 NEXTAUTH_URL="http://localhost:3000/"
 SECRET_KEY="alkuo154eUH65Ilkdshh_hsdbkKKSPMCY"
+
+GOOGLE_CLIENT_ID="1044880218271-cgv95k04mfpm7uu45qa24n37sd0ilkad.apps.googleusercontent.com"
+GOOGLE_CLIENT_SECRET="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"
